--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "sanity": "^3.70.0",
     "styled-components": "^6.1.14"
   },
@@ -38,5 +39,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "dependencies": {
+  "react-icons": "^4.10.1" 
+}
+  
 }
